--- a/index.css
+++ b/index.css
@@ -18,3 +18,16 @@ button {
     border: none;
     font-weight: bold;
 }
+
+/* STYLE THE LIST ACCORDING TO THE DESIGN */
+ul {
+    
+}
+
+li {
+    
+}
+
+a {
+
+}
