--- a/index.css
+++ b/index.css
@@ -20,6 +20,14 @@ button {
     font-weight: bold;
 }
 
+#delete-btn {
+    background: white;
+    color: #5f9341;
+    padding: 10px 20px ;
+    border: none;
+    font-weight: bold;
+}
+
 /* STYLE THE LIST ACCORDING TO THE DESIGN */
 ul {
     margin-top: 20px;
